; ModuleID = '/home/carl/AnghaBench/freebsd/usr.sbin/jail/extr_state.c_cmp_jailptr.c'
source_filename = "/home/carl/AnghaBench/freebsd/usr.sbin/jail/extr_state.c_cmp_jailptr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cfjail = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @cmp_jailptr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cmp_jailptr(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = bitcast i8* %5 to %struct.cfjail**
  %7 = load %struct.cfjail*, %struct.cfjail** %6, align 8
  %8 = getelementptr inbounds %struct.cfjail, %struct.cfjail* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i8*, i8** %4, align 8
  %11 = bitcast i8* %10 to %struct.cfjail**
  %12 = load %struct.cfjail*, %struct.cfjail** %11, align 8
  %13 = getelementptr inbounds %struct.cfjail, %struct.cfjail* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @strcmp(i32 %9, i32 %14)
  ret i32 %15
}

declare dso_local i32 @strcmp(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
